logs/app.log
2025-08-25 00:40:00,432 [INFO] Starting Basketball GM app
2025-08-25 00:40:29,858 [INFO] Starting Basketball GM app
2025-08-25 01:00:40,864 [INFO] Starting Basketball GM app
2025-08-25 01:04:45,186 [INFO] Starting Basketball GM app
2025-08-25 01:16:48,669 [INFO] Starting Basketball GM app
2025-08-25 01:17:37,346 [INFO] Starting Basketball GM app
2025-08-25 01:23:13,568 [INFO] Starting Basketball GM app
2025-08-25 01:37:51,665 [INFO] Starting Basketball GM app
2025-08-25 01:42:19,887 [INFO] Starting Basketball GM app
2025-08-25 02:08:25,430 [INFO] Starting Basketball GM app
2025-08-25 02:08:25,692 [ERROR] Failed to initialize MainMenuWindow
Traceback (most recent call last):
  File "C:\Users\bug\Desktop\Git\GM\main.py", line 82, in main
    from gui.widgets.start_menu import MainMenuWindow  # Local import for robustness
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\bug\Desktop\Git\GM\gui\widgets\start_menu.py", line 37
    title.setFont(title_font)
IndentationError: unexpected indent
2025-08-25 02:13:27,870 [INFO] Starting Basketball GM app
2025-08-25 02:24:07,188 [INFO] Starting Basketball GM app
2025-08-25 02:25:37,781 [INFO] Starting Basketball GM app
2025-08-25 02:29:08,546 [INFO] Starting Basketball GM app
2025-08-25 02:31:37,390 [INFO] Starting Basketball GM app
2025-08-25 03:33:45,949 [INFO] Starting Basketball GM app
2025-08-25 03:35:36,882 [INFO] Starting Basketball GM app
2025-08-25 09:09:01,701 [INFO] Starting Basketball GM app
2025-08-25 09:19:55,016 [INFO] Starting Basketball GM app
2025-08-25 09:27:33,404 [INFO] Starting Basketball GM app
2025-08-25 09:49:37,412 [INFO] Starting Basketball GM app
2025-08-25 09:54:45,971 [INFO] Starting Basketball GM app
2025-08-25 09:54:46,266 [ERROR] Failed to initialize MainMenuWindow
Traceback (most recent call last):
  File "C:\Users\bug\Desktop\Git\GM\main.py", line 101, in main
    from gui.widgets.start_menu import MainMenuWindow  # Local import for robustness
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\bug\Desktop\Git\GM\gui\widgets\start_menu.py", line 16, in <module>
    class MainMenuWindow(QWidget):
    ...<86 lines>...
            os.execl(python, python, *sys.argv)
  File "C:\Users\bug\Desktop\Git\GM\gui\widgets\start_menu.py", line 49, in MainMenuWindow
    start_btn.setFont(btn_font)
                      ^^^^^^^^
NameError: name 'btn_font' is not defined
2025-08-25 10:04:15,655 [INFO] Starting Basketball GM app
2025-08-25 10:14:38,264 [INFO] Starting Basketball GM app
2025-08-25 10:14:38,521 [ERROR] Failed to initialize MainMenuWindow
Traceback (most recent call last):
  File "C:\Users\bug\Desktop\Git\GM\main.py", line 101, in main
    from gui.widgets.start_menu import MainMenuWindow  # Local import for robustness
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\bug\Desktop\Git\GM\gui\widgets\start_menu.py", line 138
    self.setWindowTitle('Basketball GM — Main Menu')
    ^^^^
IndentationError: expected an indented block after function definition on line 137
2025-08-25 10:19:42,155 [INFO] Starting Basketball GM app
2025-08-25 10:28:43,576 [INFO] Starting Basketball GM app
2025-08-25 10:30:52,912 [INFO] Starting Basketball GM app
2025-08-25 10:32:26,063 [INFO] Starting Basketball GM app
